force-app/main/default/objects/SSP_ResourceMappings__mdt/SSP_ResourceMappings__mdt.object-meta.xml
<CustomObject>
    <label>SSP Resource Mapping</label>
    <pluralLabel>SSP Resource Mappings</pluralLabel>
</CustomObject>