force-app/main/default/objects/SSP_ResourceMappings__mdt/fields/ApplicablePrograms__c.field-meta.xml
<CustomField>
    <fullName>ApplicablePrograms__c</fullName>
    <description>Used to store applicable programs for a Gatepost Question</description>
    <label>ApplicablePrograms</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>