force-app/main/default/objects/SSP_ResourceMappings__mdt/fields/DetailsRequired__c.field-meta.xml
<CustomField>
    <fullName>DetailsRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Resource Details are required at Summary level</description>
    <label>Details Required</label>
    <type>Checkbox</type>
</CustomField>