force-app/main/default/objects/SSP_ResourceMappings__mdt/fields/ResourceTileFields__c.field-meta.xml
<CustomField>
    <fullName>ResourceTileFields__c</fullName>
    <description>This field is used to list different fields to be shown on Resource Tile</description>
    <label>ResourceTile Fields</label>
    <type>TextArea</type>
</CustomField>