force-app/main/default/objects/SSP_ResourceMappings__mdt/fields/ResourceType__c.field-meta.xml
<CustomField>
    <fullName>ResourceType__c</fullName>
    <description>Resource Type</description>
    <label>ResourceType</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>OR</fullName>
                
                
                    <label>Other Liquid Resource</label>
                
                </value>
            
                <value>
                
                    <fullName>AC</fullName>
                
                
                    <label>Account</label>
                
                </value>
            
                <value>
                
                    <fullName>AN</fullName>
                
                
                    <label>Annuity</label>
                
                </value>
            
                <value>
                
                    <fullName>BF</fullName>
                
                
                    <label>Burial Funds</label>
                
                </value>
            
                <value>
                
                    <fullName>BP</fullName>
                
                
                    <label>Burial Plot</label>
                
                </value>
            
                <value>
                
                    <fullName>IN</fullName>
                
                
                    <label>Investment</label>
                
                </value>
            
                <value>
                
                    <fullName>LE</fullName>
                
                
                    <label>Life Estate</label>
                
                </value>
            
                <value>
                
                    <fullName>LI</fullName>
                
                
                    <label>Life Insurance</label>
                
                </value>
            
                <value>
                
                    <fullName>LSC</fullName>
                
                
                    <label>Life Settlement Contract</label>
                
                </value>
            
                <value>
                
                    <fullName>LTC</fullName>
                
                
                    <label>Lifetime Care Agreement</label>
                
                </value>
            
                <value>
                
                    <fullName>OT</fullName>
                
                
                    <label>Other Resource</label>
                
                </value>
            
                <value>
                
                    <fullName>PQ</fullName>
                
                
                    <label>Partnership Qualified LTC Policy</label>
                
                </value>
            
                <value>
                
                    <fullName>FA</fullName>
                
                
                    <label>Pre Arranged Funeral Contract</label>
                
                </value>
            
                <value>
                
                    <fullName>PN</fullName>
                
                
                    <label>Promissory Note or Land Contract</label>
                
                </value>
            
                <value>
                
                    <fullName>RP</fullName>
                
                
                    <label>Real Estate Property</label>
                
                </value>
            
                <value>
                
                    <fullName>TR</fullName>
                
                
                    <label>Trust</label>
                
                </value>
            
                <value>
                
                    <fullName>VI</fullName>
                
                
                    <label>Vehicle</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>