force-app/main/default/objects/SSP_ResourceMappings__mdt/fields/SobjectField__c.field-meta.xml
<CustomField>
    <fullName>SobjectField__c</fullName>
    <description>Member field mapping for a particular resource</description>
    <label>SObject Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>